syntax = "proto3";

service CustomerService {
    rpc GetAll (Empty) returns (CustomerList) {}
    rpc Get (CustomerRequestId) returns (Customer) {}
    rpc Insert (Customer) returns (Customer) {}
    rpc Update (Customer) returns (Customer) {}
    rpc Remove (CustomerRequestId) returns (Empty) {}
}

message Empty {}

message Customer {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message CustomerList {
    repeated Customer customers = 1;
}

message CustomerRequestId {
    string id = 1;
}

service NewsService {
    rpc GetAll (Empty) returns (NewsList) {};
    rpc Get (NewsRequestId) returns (News) {};
    rpc Insert (News) returns (News) {};
    rpc Update (News) returns (News) {};
    rpc Remove (NewsRequestId) returns (Empty) {};
}

message News {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message NewsList {
    repeated News news = 1;
}

message NewsRequestId {
    string id = 1;
}